lanecwe-Prod/src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Add_on_Name__c</fullName>
        <description>Set by a WFR so taht it can be referenced in TCV calculation</description>
        <label>Add-on Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_value__c</fullName>
        <formula>IF(
ISPICKVAL( Billing_Frequency__c ,&apos;One Time Event&apos;), 0, 
IF(
ISPICKVAL(Unit_Type__c, &quot;Ancillary&quot;), 0,
IF( 
 Unit_Type_for_TCV__c  = &quot;Minute&quot; &amp;&amp; ! CONTAINS(Add_on_Name__c, &quot;Minimum Commit&quot;), 0, 
IF( 
CONTAINS(Add_on_Name__c, &quot;GlobalMeet Audio No Minimum Commit&quot;), 0, /* Legacy Min. Commit calculation */
IF( 
CONTAINS(Add_on_Name__c, &quot;Audio Minimum Commitment&quot;), (BidPrice__c* 12 ), /* Legacy Min. Commit calculation */
IF( 
AND( 
!( ISPICKVAL( Billing_Frequency__c , &quot;One Time Event&quot;)), 
(Contract_Term__c &gt; 11) ), MRR__c* 12, Contract_Value__c 
) 
) 
) 
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <label>Approval Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrg, RVP, VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Defined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BidPriceChange__c</fullName>
        <label>OldBidPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BidPrice__c</fullName>
        <label>BidPrice</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChangeType__c</fullName>
        <label>ChangeType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractTermChange__c</fullName>
        <label>OldContractTerm(Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term(Months)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <formula>IF(
ISPICKVAL( Billing_Frequency__c ,&apos;One Time Event&apos;), 0,
IF(
ISPICKVAL(Unit_Type__c, &quot;Ancillary&quot;), 0,
IF( 
Unit_Type_for_TCV__c = &quot;Minute&quot; &amp;&amp; ! CONTAINS(Add_on_Name__c, &quot;Minimum Commit&quot;), 0, 
IF( 
CONTAINS(Add_on_Name__c, &quot;GlobalMeet Audio No Minimum Commit&quot;), 0, /* Legacy Min. Commit calculation */
/*IF( 
RIGHT(Add_on_Name__c, 14) = &quot;Minimum Commit&quot;, 0, */ 
IF( 
CONTAINS(Add_on_Name__c, &quot;Audio Minimum Commitment&quot;), (BidPrice__c* Contract_Term__c ), /* Legacy Min. Commit calculation */
IF(ISPICKVAL(Billing_Frequency__c,&apos;Monthly&apos;),BidPrice__c*Quantity__c*Contract_Term__c, 
IF(ISPICKVAL(Billing_Frequency__c,&apos;Quarterly&apos;),((BidPrice__c* Quantity__c)/3)* Contract_Term__c, 
IF(ISPICKVAL(Billing_Frequency__c,&apos;Annually&apos;),BidPrice__c* Quantity__c*( Contract_Term__c/12),BidPrice__c*Quantity__c 
) 
) 
) 
) 
) 
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Rate__c</fullName>
        <label>Cost Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Copy__c</fullName>
        <description>This is used as for rollup on Quote for find the max value</description>
        <label>Expiration Date-Copy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>IF( TEXT(Quote.Status) ==&quot;Contract Signed by Customer&quot;, Quote.ServiceCommencementDate__c + ((365/12)* Contract_Term__c ) , null)</description>
        <formula>Quote.Service_Commencement_Date__c + ((365/12)* Contract_Term__c)</formula>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdOfClonedMasterLineItem__c</fullName>
        <label>IdOfClonedMasterLineItem</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsServiceProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsServiceProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Margin_Over_Term__c</fullName>
        <formula>TotalPrice__c - IF(  IsServiceProduct__c  , 
IF( ISPICKVAL( Billing_Frequency__c , &apos;Monthly&apos;), (  Cost_Rate__c  * Quantity__c * Contract_Term__c ) , 
IF( ISPICKVAL( Billing_Frequency__c , &apos;Quarterly&apos;),(( Cost_Rate__c  * Quantity__c *  Contract_Term__c )/3) , 
IF( ISPICKVAL( Billing_Frequency__c , &apos;Annually&apos;),(( Cost_Rate__c  * Quantity__c *  Contract_Term__c )/12), Cost_Rate__c  * Quantity__c) 
) 
),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Margin Over Term</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <description>Total price of lineitem</description>
        <label>Line Total</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <formula>IF(
OR(
Contract_Term__c = 0, 
ISPICKVAL( Billing_Frequency__c ,&apos;One Time Event&apos;)),0, 
IF(
ISPICKVAL(Billing_Frequency__c,&apos;Annually&apos;),((BidPrice__c* Quantity__c)/ 12), 
IF(
ISPICKVAL(Billing_Frequency__c,&apos;Quarterly&apos;), ((BidPrice__c* Quantity__c)/ 3) 
,BidPrice__c* Quantity__c 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Licenses__c</fullName>
        <label>Maximum Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to calculate the current TCV value while reporting.</description>
        <label>Min. Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Licenses__c</fullName>
        <description>associated with products in the background, when you choose plan with min/ max the quantity restricts them to work only within those guidelines</description>
        <label>Minimum Licenses</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Add_on__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package/Add-On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Solution__r.SolutionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>STill in testing stage.  shows hopefully if the product is im/gm or 3rd party product on QLI</description>
        <formula>IF(
CONTAINS(  Product_Family__c , &quot;iMeet&quot;), &quot;iMeet&quot;, 
IF(
CONTAINS( Product_Family__c , &quot;GlobalMeet&quot;) &amp;&amp; ! BEGINS(Product_Family__c , &quot;American: Audio: GlobalMeet&quot;) , &quot;GlobalMeet&quot;, 
IF(
CONTAINS( Product_Family__c, &quot;Audio&quot;), &quot;Audio&quot;, &quot;Other&quot;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product_custom</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuantityChange__c</fullName>
        <label>OldQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TCV Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RowId__c</fullName>
        <label>RowId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFDC18ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 QuoteLineItem ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Solution__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <formula>BidPrice__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillaries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Type_for_TCV__c</fullName>
        <description>used for Contract/Annual Value calculations.  required an update to all records.  unable to use the Unit Type from Add-on Formula as cannot be used in Roll-ups based on fields with a formula that references a formula.</description>
        <label>Unit Type for TCV</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type_from_Add_on__c</fullName>
        <formula>TEXT(Product__r.Unit_Of_Measure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Type from Add-on</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract_not_supported_SFDC__c</fullName>
        <formula>IF(Product__r.contract_not_supported_SFDC__c,&apos;yes&apos;,&apos;no&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>contract_not_supported_SFDC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract_not_supported_SFDC_text__c</fullName>
        <description>only used to see in roll-up field at Quote level</description>
        <label>contract_not_supported_SFDC (text)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>z_Prod_Name_Prod_Fam__c</fullName>
        <description>helps to see discrepancies that might break code for syncing back to the OPP line item on package inserts/updates/deletes</description>
        <formula>IF(
 (Solution__r.Name &lt;&gt; Product2.Name) &amp;&amp;  IsServiceProduct__c = True, TRUE, FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Family Name &lt;&gt; Product Name &amp; isService Product = True then TRUE , else FALSE</inlineHelpText>
        <label>z-Prod Name &lt;&gt; Prod Fam</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>To_Validate_MinMax_Quantity</fullName>
        <active>true</active>
        <description>To check whether the quantity entered is within the range of the Product.</description>
        <errorConditionFormula>AND(  ISPICKVAL(Product__r.ProductType__c, &apos;Service&apos;)  , OR( Quantity__c  &lt;  Product__r.Minimum_Quantity__c , Quantity__c  &gt;  Product__r.Maximum_Quantity__c ))</errorConditionFormula>
        <errorMessage>Product Quantity Entered is not within the Range.</errorMessage>
    </validationRules>
</CustomObject>